Cleanup deprecated method calls